tests/ui/feature-gates/feature-gate-transparent_unions.rs
#[repr(transparent)]
union OkButUnstableUnion { //~ ERROR transparent unions are unstable
    field: u8,
    zst: (),
}

fn main() {}
